# better-maxbot-api

./: .gitignore  CHANGELOG.md  README.md  format-code.py  main.py  pyproject.toml
docs/: ActionRequestBody.md  Attachment.md  AttachmentPayload.md  AttachmentRequest.md  AudioAttachment.md  AudioAttachmentRequest.md  BotAddedToChatUpdate.md  BotCommand.md  BotInfo.md  BotPatch.md  BotRemovedFromChatUpdate.md  BotStartedUpdate.md  BotsApi.md  Button.md  Callback.md  CallbackAnswer.md  CallbackButton.md  Chat.md  ChatAdmin.md  ChatAdminPermission.md  ChatAdminsList.md  ChatButton.md  ChatList.md  ChatMember.md  ChatMembersList.md  ChatPatch.md  ChatStatus.md  ChatTitleChangedUpdate.md  ChatType.md  ChatsApi.md  ContactAttachment.md  ContactAttachmentPayload.md  ContactAttachmentRequest.md  ContactAttachmentRequestPayload.md  DataAttachment.md  EmphasizedMarkup.md  Error.md  FileAttachment.md  FileAttachmentPayload.md  FileAttachmentRequest.md  (+82 more)
examples/: ex_get_info.py  ex_view_menu.py  max_bot.py  max_bot_attach.py  max_chat.py  max_commander.py  max_editmessage.py  max_repiter.py
max_client/: README.md  __init__.py  api_client.py  cmn.py  configuration.py  rest.py  utl.py
max_client/api/: __init__.py  bots_api.py  chats_api.py  messages_api.py  subscriptions_api.py  upload_api.py
max_client/models/: __init__.py  action_request_body.py  attachment.py  attachment_payload.py  attachment_request.py  audio_attachment.py  audio_attachment_request.py  bot_added_to_chat_update.py  bot_command.py  bot_info.py  bot_patch.py  bot_removed_from_chat_update.py  bot_started_update.py  button.py  callback.py  callback_answer.py  chat.py  error.py  (+100 more)
test/: test_action_request_body.py  test_attachment.py  test_attachment_payload.py  test_attachment_request.py  test_audio_attachment.py  test_audio_attachment_request.py  test_bot_added_to_chat_update.py  test_bot_command.py  test_bot_info.py  test_bot_patch.py  test_bot_removed_from_chat_update.py  test_bot_started_update.py  test_bots_api.py  test_button.py  test_callback.py  test_callback_answer.py  test_callback_button.py  test_chat.py  test_chat_admin.py  test_chat_admin_permission.py  test_chat_admins_list.py  test_chat_button.py  test_chat_list.py  test_chat_member.py  test_chat_members_list.py  test_chat_patch.py  test_chat_status.py  test_chat_title_changed_update.py  test_chat_type.py  test_chats_api.py  test_contact_attachment.py  test_contact_attachment_payload.py  test_contact_attachment_request.py  test_contact_attachment_request_payload.py  test_data_attachment.py  test_emphasized_markup.py  test_error.py  test_file_attachment.py  test_file_attachment_payload.py  test_file_attachment_request.py  (+82 more)
